<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/product_name_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:hint="@string/product_name_hint" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp">

        <EditText
            android:id="@+id/product_quantity_input_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/product_quantity_hint"
            android:inputType="number" />

        <EditText
            android:id="@+id/product_unit_input_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/product_unit_hint" />
    </LinearLayout>

    <EditText
        android:id="@+id/category_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        android:hint="@string/category_name_hint" />

    <LinearLayout
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5sp"
        android:orientation="vertical">

        <Button
            android:id="@+id/create_product_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create" />

        <Button
            android:id="@+id/delete_product_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/delete" />

    </LinearLayout>

</LinearLayout>