<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_margin="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/any_regrets"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_margin="5sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/yes" />


        <Button
            android:id="@+id/confirm_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="5sp"
            android:backgroundTint="@android:color/holo_green_light"
            android:text="@string/no" />

    </LinearLayout>

</LinearLayout>